      libraries\dbi\mysqli.dbi.lib.php, libraries\sql_query_form.lib.php,
      querywindow.php, server_databases.php, server_export.php,
      tbl_properties_operations.php:
      replaced $dblist with new PMA_List_Database class
    * libraries\database_interface.lib.php: added error reporting if dblist
      retrieval from information_schema fails

2006-09-19 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html, libraries/footer.inc.php,
      libraries/dbg/profiling.php: remove profiling feature
      due to licensing issues (non GPL code)

2006-09-18 Michal Čihař  <michal@cihar.com>
    * scripts/setup.php: Add phpdoc header comment.
    * libraries/db_config.lib.php: Removed unused file.

2006-09-15 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php libraries/Config.class.php:
      rename a function borrowed from Moodle to avoid double definition
      when PMA is called by Moodle
    * lang/finnish: Update, thanks to Yoneh - yoneh.
    * lang/bulgarian: Update, thanks to Stanislav Yordanov - stanprog.

2006-09-14 Michal Čihař  <michal@cihar.com>
    * db_details_structure.php: Fix table footer when MySQL does not support
      collations (bug #1554885, patch #1557269, thanks to Isaac Bennetch -
      ibennetch).

2006-09-12 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/config.default.php, libraries/export/sql.php:
      bug #1556934, sql compatibility mode on export

2006-09-11 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/export/sql.php: bug #1555760, export default parameter broken

2006-09-09 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php: bug #1554166, magic_quotes_runtime

2006-09-08 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/check_lang.sh: ignore differences in doc_lang
    * lang/italian: Update, thanks to Rebe - rebeluca.
    ### 2.9.0-rc1 released from QA_2_9
    * querywindow.php: bug #1549824, SQL history and quote escaping
